--- a/Backend/KNN_mfcc_features.ipynb
+++ b/Backend/KNN_mfcc_features.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "id": "11398cb8",
    "metadata": {},
    "outputs": [],
@@ -16,12 +16,12 @@
     "from matplotlib import pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
-    "df = pd.read_csv('C:\\\\Users\\\\anjal\\\\Desktop\\\\project-audio-spoofing\\\\frontend\\\\M_TRAIN.csv')"
+    "df = pd.read_csv('C:\\\\Users\\\\singl\\\\OneDrive\\\\Documents\\\\MATLAB\\\\frontend\\\\M_TRAIN.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "id": "84529537",
    "metadata": {},
    "outputs": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "id": "aff1824e",
    "metadata": {},
    "outputs": [
@@ -165,14 +165,14 @@
     "train_acc = model.score(X_scaled, y)\n",
     "print(\"The Accuracy for Training Set is {}\".format(train_acc*100))\n",
     "\n",
-    "df = pd.read_csv('C:\\\\Users\\\\anjal\\\\Desktop\\\\project-audio-spoofing\\\\frontend\\\\M_TEST.csv')\n",
+    "df = pd.read_csv('C:\\\\Users\\\\singl\\\\OneDrive\\\\Documents\\\\MATLAB\\\\frontend\\\\M_TEST.csv')\n",
     "\n",
     "df.info()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "id": "1d18b799",
    "metadata": {},
    "outputs": [
@@ -182,7 +182,7 @@
        "array([0, 0, 0, ..., 0, 1, 1])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "id": "f52ef421",
    "metadata": {},
    "outputs": [
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "id": "3ff708b2",
    "metadata": {},
    "outputs": [
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "id": "2b5c9c1d",
    "metadata": {},
    "outputs": [
