--- a/Backend/logistic_regression_on_gtcc_features-Copy1.ipynb
+++ b/Backend/logistic_regression_on_gtcc_features-Copy1.ipynb
@@ -198,7 +198,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('C:\\\\Users\\\\singl\\\\OneDrive\\\\Documents\\\\MATLAB\\\\frontend\\\\G_TEST.csv')"
+    "df = pd.read_csv('C:\\\\Users\\\\singl \\\n",
+    "                 \\\\OneDrive\\\\Documents\\\\MATLAB\\\\frontend\\\\G_TEST.csv')"
    ]
   },
   {
